@@ -24,6 +24,7 @@ Build 2.1.0
 	##### Breaking Changes #####
 		* see NH-1633 if you are using SQL native queries
 		* CriteriaUtil is gone. NHibernate.Transform.Transformers now returns predefined IResultTransformer.
+		* Now filters are working even with many-to-one association for Criteria and HQL (NH-1293, NH-1179)
 
 Build 2.1.0.Alpha2 (rev4167)
 ========================
